2018-03-06  Araki Ken  <arakiken@users.sf.net>

	* README.ja, mlterm.1: Updated.

	* vt_logs.[ch]:
	  - The value of 'logsize' option is automatically changed to 'unlimited'
	    if it is over 65535.
	  - VT_LOG_SIZE_UNIT is defined.

2018-03-04  Araki Ken  <arakiken@users.sf.net>

	* cocoa/install.sh: libotl.so -> libotl-quartz.so

	* cocoa.m: Compiling error is fixed.

	* MLActivity.java:
	  - showDialog() => showConnectDialog()
	  - showMessage() is added.

	* android/jni/ui_display.c: bl_dialog_set_callback(dialog_cb) is added.

2018-03-03  Araki Ken  <arakiken@users.sf.net>

	* libotl/Makefile.in, otl.h: Library name is changed from libotl to
	  libotl-win32 on win32api and to libotl-quartz on MacOSX/Cocoa in order
	  to coexist with libotl for sdl2.

	* fb/ui_font.c: get_cached_xfont() checks xfont->is_aa

2018-03-03  Araki Ken  <arakiken@users.sf.net>

	* vt_shape.c: vt_shape_ot_layout() does nothing for a character whose
	  charset is PICTURE_CHARSET.

	* sdl2/ui_display.c: Not only SDL_DestroyCond but also SDL_CondSignal()
	  is called in ui_display_close().

	* fb/ui_window.c: Fix illegal memory access in draw_string_intern().

	* sdl2/ui_imagelib.c: exec_mlimgloader() is added, and it works on win32api.

	* mlfc/main.c: FONTCONFIG_PATH environmental variable is set.

	* configure.in, registobmp/main.c: If SDL_ttf is not found, registobmp is
	  compiled without it.

2018-02-28  Araki Ken  <arakiken@users.sf.net>

	* vt_ot_layout.c: If 5 or more same usascii characters are repeated,
	  vt_ot_layout() doesn't call vt_ot_layout_shape().

	* ui_font.c: init_fontconfig() initializes FONTCONFIG_PATH environmental
	  variable if USE_WIN32API is defined.

	* mlfc/main.c: Compiling error is fixed.

2018-02-25  Araki Ken  <arakiken@users.sf.net>

	* ui_screen_manager.c: "No fonts" error message is shown by bl_dialog()
	  instead of bl_msg_printf().

	* sdl2/ui_display.c: Falling into infinite sleep in select() is fixed.
